# wtfpython

./: .deepsource.toml  .gitattributes  .gitignore  .markdownlint.yaml  .npmignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  add_categories  broken.py  code-of-conduct.md  else_without_if.txt  ex.txt  example1.txt  generated.md  mixed_tabs_and_spaces.py  mkdocs.yml  noxfile.py  package.json  parse_readme.py  pyproject.toml  wtfpy.md  wtfpython
.github/ISSUE_TEMPLATE/: bug.md  new_snippet.md  translation.md
.github/PULL_REQUEST_TEMPLATE/: common.md  new_snippet.md  pull_request_template.md  translation.md
.github/workflows/: documentation.yml  pr.yml
docs/: CN.md  GE.md  KO.md  RU.md  USA.md  VI.md  index.md
docs/css/: neoteroi-cards.css  neoteroi-gantt.css  neoteroi-mkdocs.css  neoteroi-mkdocs.min.css  neoteroi-spantable.css  neoteroi-timeline.css
hashem-ishmorpython-pypi/: content.md  hashem-ishmorpython  setup.py
hashem-ishmorpython-pypi/hashem-ishmor_python/: main.py
irrelevant/: generate_contributions.py  insert_ids.py  json_generator.py  notebook_generator.py  notebook_instructions.md  parse_readme.py  wtf.ipynb
irrelevant/obsolete/: add_categories  generate_contributions.py  initial.md  parse_readme.py
snippets/: 2_tricky_strings.py
translations/: README-ru.md
translations/fa-farsi/: README.md  section1-temp.md
translations/ru-russian/: CONTRIBUTORS.md  README.md
wtfpython-pypi/: content.md  setup.py  wtfpython
wtfpython-pypi/wtf_python/: main.py
